--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".views.Menu"/>
+        <activity android:name=".views.ProfileActivity"/>
+        <activity android:name=".views.SettingsActivity"/>
     </application>
 
 </manifest>
