--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.MenuActivity"/>
+        <activity android:name=".views.MenuActivity"
+            android:configChanges="orientation|screenSize">
+        </activity>
         <activity android:name=".views.ProfileActivity"/>
         <activity android:name=".views.SettingsActivity"/>
+        <activity android:name=".views.GameActivity"
+            android:configChanges="orientation|screenSize">
+
+        </activity>
     </application>
 
 </manifest>
